<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.sign_up.SignUpFragment">

    <EditText
        android:id="@+id/email_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/password_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_below="@id/email_sign_up"/>

    <TextView
        android:id="@+id/login_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_sign_up"
        android:layout_centerHorizontal="true"
        android:paddingVertical="10dp"
        android:text="@string/if_you_have_an_account_login"/>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_direction"
        android:text="@string/sign_up"/>


</RelativeLayout>