<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.coin_detail.CoinDetailFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_to_fresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/coin_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="35dp"
                android:layout_centerHorizontal="true"/>

            <LinearLayout
                android:id="@+id/name_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/coin_image"
                android:paddingStart="20dp"
                android:paddingTop="25dp"
                tools:ignore="RtlSymmetry"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"/>

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/description_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_view"
                android:scrollbars = "vertical"
                android:paddingStart="20dp"
                android:paddingTop="25dp"
                tools:ignore="RtlSymmetry"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"/>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/current_price_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/description_view"
                android:paddingStart="20dp"
                android:paddingTop="25dp"
                tools:ignore="RtlSymmetry"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_price"/>

                <TextView
                    android:id="@+id/current_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/price_change_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/current_price_view"
                android:paddingStart="20dp"
                android:paddingTop="25dp"
                tools:ignore="RtlSymmetry"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_change"/>

                <TextView
                    android:id="@+id/price_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/hashing_algorithm_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/price_change_view"
                android:paddingStart="20dp"
                android:paddingTop="25dp"
                tools:ignore="RtlSymmetry"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hashing_algorithm"/>

                <TextView
                    android:id="@+id/hashing_algorithm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbars = "vertical"
                    android:layout_marginHorizontal="20dp" />
            </LinearLayout>

            <Button
                android:id="@+id/favorite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="35dp"
                android:text="@string/save_to_favorites"/>

        </RelativeLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



</RelativeLayout>